cmake_minimum_required(VERSION 3.23)
project(cpl_nju_XieXuan C)

set(CMAKE_C_STANDARD 11)

add_subdirectory(0)
add_subdirectory(1.intro)
add_subdirectory(2.if)
add_subdirectory(3.swich)
add_subdirectory(.culculation_c_homework)
add_subdirectory(4.loops)
add_subdirectory(5.function)
add_subdirectory(lsa_competition)
add_subdirectory(cpl_problemset)
add_subdirectory(6.recursion)
add_subdirectory(7.data-types)
add_subdirectory(c_net_selflearning)
add_subdirectory(others)
add_subdirectory(8.pointer-1)
add_subdirectory(mlg_question)
add_subdirectory(cpl_plus_problems)
add_subdirectory(ruangong_competition)
add_subdirectory(9-more-pointers)
add_subdirectory(cpl_midterms)
add_subdirectory(10-double-pointers)
add_subdirectory(11-struct)
add_subdirectory(modified__test)
add_subdirectory(12-linklist)
add_subdirectory(structure-and-algorithm)
add_subdirectory(tianti)
add_subdirectory(review)
add_subdirectory(a_test)
add_subdirectory(ai)
add_subdirectory(ll_ramf)
