add_executable(lsa_mistery lsa_mistery.c)
add_executable(test_lsh test_lsh.c)
add_executable(v_50 v_50.c)
add_executable(cake cake.c)
add_executable(loop_competition loop_competition.c)
add_executable(floor floor.c)
add_executable(lamp lamp.c)
add_executable(branch branch.c)
add_executable(way way.c)