add_subdirectory(1st)

add_executable(grade grade.c)
add_executable(max_bias max_bias.c)
add_executable(kth kth.c)
add_executable(mixer mixer.c)
add_executable(study_tmp ../review/study_tmp.c)
add_executable(tower tower.c)
add_executable(anti-cheat anti-cheat.c)
add_executable(easy_tower ../review/easy_tower.c)
add_executable(persons persons.c)
add_executable(b_search b_search.c)
add_executable(board0 board0.c)
add_executable(review_bracket review_bracket.c)
add_executable(review-cuboid review-cuboid.c)
add_executable(review-quick-sort review-quick-sort.c)
add_executable(review-radix review-radix.c)
add_executable(review-file review-file.c)